# sdf_slam

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  diary.txt  testing4.py  thoughts.txt  todo.txt  utils.py
cmake/Modules/: FindSuiteSparse.cmake
config/: generate_scans.yml  sdf.yml
experiments/: experiment_runner.py  utils.py
src/: CMakeLists.txt  main.cpp  main_ceres.cpp  main_eigen.cpp  source_files.cmake
src/config/: utils.cpp  utils.hpp
src/map/: map.cpp  map.hpp  map_derivatives_2d.cpp  map_derivatives_2d.hpp  map_derivatives_3d.cpp  map_derivatives_3d.hpp  utils.cpp  utils.hpp
src/optimization/: derivatives.cpp  derivatives.hpp  objective.cpp  objective.hpp  objective_ceres.cpp  objective_ceres.hpp  optimizer.cpp  optimizer.hpp  residuals.cpp  residuals.hpp  residuals_2d.cpp  residuals_2d.hpp  residuals_3d.cpp  residuals_3d.hpp  utils.cpp  utils.hpp
src/scan/: generate.cpp  generate.hpp  scan.cpp  scan.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  utils.cpp  utils.hpp
src/scan/shape/: circle.cpp  circle.hpp  rectangle.cpp  rectangle.hpp  shape.hpp  sinusoid.cpp  sinusoid.hpp
src/state/: state.cpp  state.hpp
src/targets/: CMakeLists.txt
src/targets/generate_scan/: CMakeLists.txt  main.cpp
src/targets/main/: CMakeLists.txt  main.cpp
src/targets/main_ceres/: CMakeLists.txt  main_ceres.cpp
src/targets/main_eigen/: CMakeLists.txt  main_eigen.cpp
src/targets/main_incremental/: CMakeLists.txt  main.cpp
src/visualize/: utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_deriv.cpp
